[package]
name = "fist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "fist"
path = "src/main.rs"

[dependencies]
fist_lib = { version = "0.1.0", path = "./fist_lib" }
fist_macro = { version = "0.1.0", path = "./fist_macro" }
tokio = { vwesion = "1.23.0", features = ["full"] }
actix-web = "4.2.1"
anyhow = "1.0.68"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
itertools = "0.10.5"
dotenv = "0.15.0"
chrono = { version = "0.4.1", features = ["serde"] }
once_cell = "1.17.0"
log = "0.4.17"
env_logger = "0.10.0"
lazy_static = "1.4.0"
config = "0.13.3"
arc-swap = "1.6.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"