[package]
name = "fist_macro"
version = "0.1.0"
authors = ["huangyinglun <huangyinglun@dreamdt.cn>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"

